corrections for mobile

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta name="keywords" content="Moldova, Final Project, HTML, CSS, Eastern Europe, Traditions, Travel">
 </head>
 <body>
-    <div id="wrapper">
-
+    <div id="wrapper-index">
         <header>
             <!--This is my index page for my Final Project for CISW 300-Author: Olga Musteata.-->
             <h1>Republic of Moldova</h1>
@@ -26,7 +25,7 @@
                 <li><a href="https://my-resume-indol.vercel.app/">Author's Resume</a></li>
             </ul>
         </nav>
-            
+        <br><br>
         <!--This is the body of my index page containing text and pictures. The text is arranged in two columns and several rows-->
         <main>
             <div class="row">
@@ -78,7 +77,7 @@
     </div>
     <!--This is the footer-->
     <footer>
-        <p>&copy; My Final Project Home page. Last updated: December, 2020.</p>   
+        <p>&copy; Home page. Last updated: October, 2022.</p>   
     </footer>
 </body>
 </html>
