--- a/subfolders/traditions.html
+++ b/subfolders/traditions.html
@@ -12,7 +12,7 @@
 
 <!--This is the body information for Traditions page -->
 <body>
-    <div id="wrapper">
+    <div id="wrapper-traditions">
 
         <header>
             <h1>Republic of Moldova</h1>
@@ -31,7 +31,7 @@
     <!--This is the first image floating right -->
         <main>
             <div class="main">
-                <h2 #trad>Local Traditions</h2>
+                <h2>Local Traditions</h2>
                 <figure id="float_right" class="dacii">
                     <img src="../images/geto-dacii.jpg" alt="Geto-Dacii">
                     <figcaption style="text-align: center;">Geto-Dacii</figcaption>
@@ -45,7 +45,7 @@
                     the Slavs, and most of all the Romans.</p>
                     
                 <!--This is the first image floating left -->
-                <figure class="float_left" class="hora">
+                <figure class="float_left" id="hora">
                     <img src="../images/hora_blackandwhite.jpg" alt="Hora dance">
                     <figcaption>
                         <a href="https://youtu.be/L20oTDefNcg">Hora - Traditional dance (video)</a>
@@ -114,7 +114,7 @@
             
                 <!--This is the footer -->
                 <footer>
-                    <p>&copy; My Final Project Home page. Last updated: December, 2020.</p>   
+                    <p>&copy; Traditions page. Last updated: October, 2022.</p>   
                 </footer>
             </div>
         </main>
