changes for mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Moldova, Final Project, HTML, CSS, Eastern Europe, Traditions, Travel">
 </head>
 <body>
-    <div id="wrapper-index">
+    <div id="wrapper">
         <header>
             <!--This is my index page for my Final Project for CISW 300-Author: Olga Musteata.-->
             <h1>Republic of Moldova</h1>
@@ -27,7 +27,7 @@
         </nav>
         <br><br>
         <!--This is the body of my index page containing text and pictures. The text is arranged in two columns and several rows-->
-        <main>
+        <main id="index">
             <div class="row">
                 <div class="column">
                     <h3>Contemporary Moldova</h3>     
