--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -29,7 +29,7 @@
         </div>
         
         <!--This is the text divided in two columns styled in two colors for background and text color -->
-        <main>
+        <main id="destinations">
             <div class="dark_background">
                 <div id="float_right" class="chisinau">
                     <img src="../images/md_dance.jpg" alt="Chisinau - the capital of Moldova"></div>
