--- a/subfolders/traditions.html
+++ b/subfolders/traditions.html
@@ -9,16 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Moldova, Final Project, HTML, CSS, Eastern Europe, Traditions, Travel">
 </head>
-
-<!--This is the body information for Traditions page -->
 <body>
-    <div id="wrapper-traditions">
-
+    <div id="wrapper">
         <header>
             <h1>Republic of Moldova</h1>
         </header> 
-
-    <!--This is the navigation bar -->
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -27,14 +22,13 @@
                 <li><a href="https://my-resume-indol.vercel.app/">Author's Resume</a></li>
             </ul>
         </nav>
-
     <!--This is the first image floating right -->
-        <main>
+        <main id="traditions">
             <div class="main">
                 <h2>Local Traditions</h2>
                 <figure id="float_right" class="dacii">
                     <img src="../images/geto-dacii.jpg" alt="Geto-Dacii">
-                    <figcaption style="text-align: center;">Geto-Dacii</figcaption>
+                    <figcaption>Geto-Dacii</figcaption>
                 </figure>       
                 <p>The cultural heritage of Moldova is abundant with traditions and customs. 
                     The territory of modern Moldova was once inhabited by geto-daci tribes, whose predominant occupations where agriculture and goat herding. 
