one more change

--- a/subfolders/contact_info.html
+++ b/subfolders/contact_info.html
@@ -24,7 +24,7 @@
             <li><a href="https://my-resume-indol.vercel.app/">My Resume</a></li>
         </ul>
     </nav>
-    <main>
+    <main id="contact">
         <h2>Contact Information</h2>
         <figure id="float_right" class="welcome">
             <img src="../images/welcome.jpg" alt="welcome image">
