corrected again for mobile

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 <body>
     <div id="wrapper">
         <header>
-            <!--This is my index page for my Final Project for CISW 300-Author: Olga Musteata.-->
             <h1>Republic of Moldova</h1>
-        </header> 
-            
-        <!--These are the buttons from navigation bar-->        
+        </header>     
+        <!--Author: Olga Musteata.-->  
         <nav>
             <ul>
                 <li><a href="subfolders/tourist_destinations.html">Tourist Destinations</a></li>
@@ -52,7 +50,8 @@
                     <p><b>Population:</b> <br>3.6 million<br><br>
                         <b>Area:</b> <br>slightly larger than Maryland<br><br>
                         <b>Capital:</b> <br>Chisinau (650,000)<br><br>
-                        <b>Languages:</b> <br>Moldovan (official), Russian, Gagauz (a Turkish dialect)
+                        <b>Languages:</b> <br>Moldovan (official), Russian, Gagauz 
+                        <br>(a Turkish dialect)
                     <p><b>Flag:</b></p>
                     <img src="images/flag1.JPG" alt="The flag of Moldova">
                 </div>   
@@ -60,7 +59,8 @@
             <!--This is Moldova on google map-->
             <div class="column">
                 <div id="map_box">
-                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2788358.118364804!2d26.14658442473207!3d46.961572618520265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3628b769a1%3A0x258119acdf53accb!2sMoldova!5e0!3m2!1sen!2sus!4v1606369255591!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>Moldova - Google Maps
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2788358.118364804!2d26.14658442473207!3d46.961572618520265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3628b769a1%3A0x258119acdf53accb!2sMoldova!5e0!3m2!1sen!2sus!4v1606369255591!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <figcaption>Moldova - Google Maps</figcaption>
                 </div>
                     <h3>Moldovans in the USA</h3>
                     <p>Emigration of Moldovans increased with the country's independence and subsequent conflicts in the 1990s 
