block removed in styles

--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -50,8 +50,9 @@
                 <div class="column">
                     <h3>I. Chisinau - the Capital of Moldova</h3>              
                         <div id="image_box">
-                            <img src="../images/Chisinau-Moldova_1.jpg" alt="Chisinau - the capital of Moldova"></div>
-                        <p>This is a modern and friendly place - Moldova's biggest city that serves as its capital. 
+                            <img src="../images/Chisinau-Moldova_1.jpg" alt="Chisinau - the capital of Moldova">
+                        </div>
+                            <p>This is a modern and friendly place - Moldova's biggest city that serves as its capital. 
                             Chisinau has loads of green space, parks, and historical buildings.<br><br>
                             There's also no shortage of restaurants, art galleries, nightclubs, spas, and casinos!<br><br>
                             You'll want to visit Pushkin Park and the orange pyramid at the World War II memorial. 
