corrections for mobile

--- a/subfolders/contact_info.html
+++ b/subfolders/contact_info.html
@@ -21,7 +21,7 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="traditions.html">Local Traditions</a></li>
             <li><a href="tourist_destinations.html">Tourist Destinations</a></li>
-            <li><a href="https://my-resume-indol.vercel.app/">My Resume</a></li>
+            <li><a href="https://my-resume-indol.vercel.app/">Author's Resume</a></li>
         </ul>
     </nav>
     <main id="contact">
