--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -23,7 +23,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="traditions.html">Local Traditions</a></li>
                     <li><a href="contact_info.html">Contact Information</a></li>
-                    <li><a href="https://my-resume-indol.vercel.app/">My Resume</a></li>
+                    <li><a href="https://my-resume-indol.vercel.app/">Author's Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -135,7 +135,7 @@
             
         <!--This is the footer -->
         <footer>
-            <p>&copy; My Final Project Home page. Last updated: December, 2020.</p>   
+            <p>&copy; Tourist Destinations - Moldova. Last updated: November, 2022.</p>   
         </footer>
     </main>
 </body>
