more corrections to mobile

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <!--This is the footer-->
     <footer>
-        <p>&copy; Home page. Last updated: October, 2022.</p>   
+        <p>&copy; Home page. Republic of Moldova. Last updated: October, 2022.</p>   
     </footer>
 </body>
 </html>
