--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -135,7 +135,7 @@
             
         <!--This is the footer -->
         <footer>
-            <p>&copy; Tourist Destinations - Moldova. Last updated: November, 2022.</p>   
+            <p>Tourist Destinations - Moldova</p>   
         </footer>
     </main>
 </body>
