--- a/subfolders/traditions.html
+++ b/subfolders/traditions.html
@@ -108,7 +108,7 @@
             
                 <!--This is the footer -->
                 <footer>
-                    <p>&copy; Traditions page. Last updated: October, 2022.</p>   
+                    <p>Traditions in Moldova</p>   
                 </footer>
             </div>
         </main>
