corrections to mobile

--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -134,9 +134,9 @@
         </div>
             
         <!--This is the footer -->
-        <footer>
+        <!-- <footer>
             <p>Tourist Destinations - Moldova</p>   
-        </footer>
+        </footer> -->
     </main>
 </body>
 </html>
