--- a/subfolders/traditions.html
+++ b/subfolders/traditions.html
@@ -107,9 +107,9 @@
                     while making a wish. The legend says that the wishes will come true.</p>
             
                 <!--This is the footer -->
-                <footer>
+                <!-- <footer>
                     <p>Traditions in Moldova</p>   
-                </footer>
+                </footer> -->
             </div>
         </main>
     </div>
