--- a/subfolders/tourist_destinations.html
+++ b/subfolders/tourist_destinations.html
@@ -34,7 +34,7 @@
                 <div id="float_right" class="chisinau">
                     <img src="../images/md_dance.jpg" alt="Chisinau - the capital of Moldova"></div>
                     <h2>Tourist Destinations</h2>
-                    <p>This small landlocked European country is found between Romania to the west and the Ukraine to the east. 
+                    <p id="first_p">This small landlocked European country is found between Romania to the west and the Ukraine to the east. 
                         Up until World War II, it was a part of Romania and if you visit both countries, you'll see a lot of cultural similarities. 
                         Then it was part of the Soviet Union until 1991, so you'll also see a number of similarities there.<br><br> But Moldova has a lot to offer in its own right.  
                         First, it's remote and rarely visited - making it perfect for adventurers who want to blaze a trail. 
