updated link to portfolio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="subfolders/tourist_destinations.html">Tourist Destinations</a></li>
                 <li><a href="subfolders/traditions.html">Local Traditions</a></li>
                 <li><a href="subfolders/contact_info.html">Contact Information</a></li>
-                <li><a href="https://my-resume-indol.vercel.app/">Author's Resume</a></li>
+                <li><a href="https://portfolio-olga.vercel.app/">Author's Resume</a></li>
             </ul>
         </nav>
         <br><br>
